# ghsim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
e2e/: package.json  playwright.config.ts
e2e/fixtures/: notifications_mixed.json
e2e/tests/: comment-age-filter.spec.ts  comment-cache.spec.ts  comment-visibility.spec.ts  expanded.spec.ts  filtering.spec.ts  inline-code-title.spec.ts  interest-filter.spec.ts  issue-versions-collapse.spec.ts  keyboard-shortcuts.spec.ts  mark-done.spec.ts  mobile-layout.spec.ts  my-prs-classification.spec.ts  open-unread.spec.ts  polish.spec.ts  rate-limit-explain.spec.ts  remove-reviewer.spec.ts  rendering.spec.ts  scroll-after-done.spec.ts  selection.spec.ts  smoke.spec.ts  storage-utils.ts  sync.spec.ts  triage-queues.spec.ts  ui-shell.spec.ts  undo.spec.ts  uninteresting-no-comments.spec.ts
ghinbox/: run_flow.py
ghinbox/api/: fetcher.py  login_fetcher.py  login_routes.py  models.py  routes.py  server.py
ghinbox/flows/: __init__.py  anchor_tracking.py  done_then_close.py
ghinbox/parser/: notifications.py
ghinbox/webapp/: notifications-actions.js  notifications-comments.js  notifications-core.js  notifications-ui.js  notifications.css  notifications.html
ghsim/: auth.py  fixtures.py  github_api.py  notifications.py  run_flow.py  token.py
tests/: __init__.py  test_parser.py
webapp/: PLAN.md  bulk-notifications.html  expanded.html  index.html  notifications-actions.js  notifications-comments.js  notifications-core.js  notifications-sync.js  notifications-ui.js  notifications.css  notifications.html  notifications.js
(+22 files in other folders)
